no information available

--- a/Jan2024/Week2/Project/state-management-example/src/App.css
+++ b/Jan2024/Week2/Project/state-management-example/src/App.css
@@ -1,6 +1,5 @@
 /* App css */
 
-/* for navbar */
 .navbar {
   position: fixed;
   top: 0;
@@ -16,6 +15,7 @@
 .navbar>span {
   color: #ffffff;
   font-size: 28px;
+  padding: 18px;
   cursor: pointer;
 }
 
@@ -35,7 +35,25 @@
 .navbar>ul>li:hover {
   color: #6b502a;
   background: #ffffff;
-  border-radius: 16px;
+  border-radius: 10px;
   padding: 6px;
 }
 
+.container {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 64px 0;
+  height: calc(100% - 64px);
+  overflow: hidden scroll;
+}
+
+.profile {
+  width: 240px;
+  padding: 8px;
+  margin: 5px;
+  color: #ffffff;
+  background: #6b502a;
+  text-align: center;
+}
